# Global-Energy-Price-Platform

./: .env  README.md  pyproject.toml
airflow/dags/: energy_pipeline_dag.py
app/ingestion/: fetch_energy_prices.py
app/transformation/: transformer.py
app/utils/: constants.py  helpers.py
app/validation/: validator.py
config/: settings.py
flask_app/templates/: index.html
