[project]
name = "global-energy-price-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "flask>=3.1.3",
    "isort>=8.0.1",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
